# RTMate

./: .env  Cargo.toml  QODER.md  README.md
.github/workflows/: rust.yml
.specify/memory/: constitution.md
assets/: chat.html  index.html
docs/: rust-overview.md
examples/: ws.rs
rt-common/: Cargo.toml
rt-common/src/: dao.rs  dto.rs  lib.rs  response_common.rs
rtmate-auth/: Cargo.toml
rtmate-auth/examples/: deadpool_postgres_test.rs  di.rs  tokio_postgres_test.rs
rtmate-auth/src/: common.rs  dao.rs  dao_query.rs  db.rs  dto.rs  lib.rs  main.rs  models.rs  schema.rs  service.rs  web_context.rs
rtmate-auth/src/domain/repositories/: mod.rs  rt_app_repository_trait.rs
rtmate-auth/src/infrastructure/persistence/: mod.rs  rt_app_repository.rs
rtmate-common/: Cargo.toml
rtmate-common/src/: dao.rs  models.rs  response_common.rs  schema.rs
rtmate-server/: Cargo.toml
rtmate-server/assets/: chat.html  script.js
rtmate-server/examples/: ws.rs
rtmate-server/self_signed_certs/: cert.pem  key.pem
rtmate-server/src/: bootstrap.rs  common.rs  dao_query.rs  dto.rs  handler.rs  lib.rs  main.rs  req.rs  store.rs  web_context.rs
rtmate-server/src/handlers/: auth.rs  errors.rs  mod.rs  ws.rs
rtmate-server/src/manager/: client.rs  mod.rs  ws_connection.rs
rtmate-server/src/routes/: mod.rs
rtmate-server/src/services/: pubsub.rs
rtmate-server/tests/integration/: ws_pubsub.rs
rtmate-websocket-server/: Cargo.toml
rtmate-websocket-server/examples/: ws.rs
specs/001-manage-client-connection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-manage-client-connection/checklists/: requirements.md
specs/001-manage-client-connection/contracts/: connection-management.md
