[workspace]

resolver = "2"

members = [
    "rtmate-auth",
    "rtmate-server"
]

[workspace.dependencies]
axum = { version = "0.8.4", features = ["http2", "ws", "tokio"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = "0.26.2"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
