[workspace]

resolver = "2"

members = [
    "rtmate-auth",
    "rtmate-server"
]

[workspace.dependencies]
axum = { version = "0.8.4", features = ["http2", "ws", "tokio"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = "0.26.2"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0.141"
serde = "1.0.219"
anyhow = "1.0.98"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
uuid = "1.17.0"
tokio-postgres = "0.7.13"
deadpool-postgres = "0.14.1"
config = "0.15.0"
dotenvy = "0.15.7"