[package]
name = "rt-common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = { workspace = true }
serde = {workspace = true, features = ["derive"] }
anyhow = { workspace = true }
tokio-postgres = { workspace = true }
deadpool-postgres = { workspace = true, features = ["serde"] }
config = { workspace = true }
dotenvy = {workspace = true }
deadpool-diesel = { workspace = true, features = ["postgres"]}
diesel = { workspace = true, features = ["postgres", "chrono"]}
thiserror = { workspace = true }
