[package]
name = "rtmate-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["http2", "ws", "tokio"] }
axum-server = { workspace = true, features = ["tls-rustls"] }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true}
tower-http = { workspace = true, features = ["fs", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde_json = { workspace = true }
serde = {workspace = true, features = ["derive"] }
anyhow = { workspace = true }
tokio-postgres = { workspace = true }
deadpool-postgres = { workspace = true, features = ["serde"] }
config = { workspace = true }
dotenvy = {workspace = true }
