[package]
name = "rtmate-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["http2", "ws", "tokio"] }
axum-server = { workspace = true, features = ["tls-rustls"] }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true}
tower-http = { workspace = true, features = ["fs", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde_json = { workspace = true }
serde = {workspace = true, features = ["derive"] }
 
