[package]
name = "rtmate-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rtmate-common = { path = "../rtmate-common"}

axum = { workspace = true, features = ["http2", "ws", "tokio"] }
axum-server = { workspace = true, features = ["tls-rustls"] }
tokio = { workspace = true, features = ["full"] }
# tokio-tungstenite = { workspace = true}
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "local-time"] }
serde_json = { workspace = true }
serde = {workspace = true, features = ["derive"] }
anyhow = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true, features = ["postgres", "chrono"]}
time = { workspace = true }

